--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <title>Banana meter</title>
+        <!-- don't mind these: -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- import the stylesheet -->
+        <!-- these import the stylesheets: -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:500" />
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/style.css" />
