--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.1.2/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.7.0/dist/teachablemachine-image.min.js"></script>
     <!-- these load our code: -->
-    <script src="./js/model.js"></script>
+    <script src="./js/model-runner.js"></script>
     <script src="./js/bar-graph.js"></script>
   </head>
   <body>
