❣️💄 Checkpoint ./index.html:8038979/612

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
         </section>
         <section id="info">
             <h2>
-                This machine learning model was made without coding using
-
+                This machine learning model was made 
                 <a href="https://teachablemachine.withgoogle.com/">Teachable Machine.</a>
             </h2>
-            <h2><a href="null">Learn how we made it.</a></h2>
+            <h2><a href="null">Learn how we made it without coding.</a></h2>
         </section>
         <footer>
             <h2>
