👘🎌 Checkpoint ./index.html:8038979/27

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
         <section id="info">
             <h2>
-                This machine learning model was made 
+                This machine learning model was made using 
                 <a href="https://teachablemachine.withgoogle.com/">Teachable Machine.</a>
             </h2>
             <h2><a href="null">Learn how we made it without coding.</a></h2>
@@ -43,6 +43,7 @@
         <script type="module">
             import { setupModel } from './js/model-runner.js';
             import { setupBarGraph, updateBarGraph } from './js/bar-graph.js';
+          
             //           _____             .|                      _.._     ,.--.
             //   _.._    \  __`'.        .' |_      _  __  ___    / .. `.  //    \
             //  / .. `.   | |-.\ \ .-. .'     |    | |/  `.'  `. / /__\  \ \\    /
