🐩⚓️ Checkpoint ./index.html:8038979/106

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             //  `. ___.' /_____.'/ | |   |   /     |_|  |_|  |_|           \\    /
             //           \_____|/  |_|   `'-'                               `'--'
             // train your own model using [TODO_TM2_URL], and replace this URL with your own
-            let URL = 'https://storage.googleapis.com/tm-models/LlOMjepS/';
+            let URL = 'https://teachablemachine.withgoogle.com/models/NE3Fl49O/';
 
             // setupBarGraph is defined in the js/bar-graph.js file
             setupBarGraph(URL);
