🏞🐝 Checkpoint ./index.html:8038979/38 ./README.md:8038979/50

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 This machine learning model was made using 
                 <a href="https://teachablemachine.withgoogle.com/">Teachable Machine.</a>
             </h2>
-            <h2><a href="null">Learn how we made it without coding.</a></h2>
+            <h2><a href="https://medium.com/p/4bfffa765866/">Learn how we made it without coding.</a></h2>
         </section>
         <footer>
             <h2>
