🐲🐜 Checkpoint ./index.html:8038979/78 ./css/style.css:8038979/788

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <section id="model">
             <h1>I taught a machine learning model to tell how ripe bananas are.</h1>
             <h2>Hold up a banana to the webcam.</h2>
-            <div id="webcam-wrapper"></div>
+            <div id="webcam-wrapper">
+              <div class="loader"></div>
+            </div>
             <div id="graph-wrapper"></div>
         </section>
         <section id="info">
